# voteview-committees

./: .gitignore  Makefile  README.md  committees.md  pyproject.toml
.github/workflows/: daily-update.yml
House/: build_committee_spells.py  committee_spells.csv  download_committee_elections.py  download_cr_resignations.py  download_memberdata_current.py  download_memberdata_wayback.py  house_committee_codes.json  house_committee_spells.csv  house_elections.csv  house_resignations.csv  parse_committee_elections.py  parse_cr_resignations.py  parse_memberdata_snapshots.py  resignations.csv
House/committee_elections_xml/: 101_hres142.html  101_hres148.html  102_hres193.html  102_hres344.html  104_hres13.html  106_hres6.html  106_hres7.html  106_hres8.html  107_hres19.html  108_hres104.html  108_hres123.html  108_hres124.html  108_hres130.html  108_hres209.html  108_hres22.html  108_hres24.html  108_hres35.html  108_hres36.html  108_hres495.html  108_hres504.html  108_hres505.html  108_hres52.html  108_hres539.html  108_hres553.html  108_hres590.html  108_hres661.html  108_hres670.html  108_hres678.html  108_hres741.html  108_hres756.html  108_hres762.html  108_hres795.html  108_hres806.html  108_hres835.html  109_hres1083.xml  (+272 more)
Senate/: build_senate_committee_spells.py  download_senate_committee_elections.py  download_senate_committees_wayback.py  download_senatordata_wayback.py  parse_senate_committee_elections.py  parse_senate_committee_snapshots.py  parse_senatordata_snapshots.py  senate_committee_spells.csv  senate_elections.csv  update_senate_snapshots.py
(+1093 files in other folders)
