[tool.poetry]
name = "voteview-committees"
version = "0.1.0"
description = "Download and build House and Senate committee membership spell data"
authors = ["Jeff Lewis <jeffreybyronlewis@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
waybackpy = "^3.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
